--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2"
 services:
   web:
     build: .
@@ -8,12 +8,10 @@ services:
       - "3000:3000"
     env_file:
       - '.env.example'
+    command: bundle exec rails s -b '0.0.0.0'
     depends_on:
       - db
-
   db:
     image: postgres
     ports:
       - "5432"
-
-
