--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # Ignore bundler config.
 /.bundle
 
-public/system/dragonfly
+public/system/
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
