--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,11 @@ rvm:
   - 2.0
   - 2.1
   - 2.2
-  - 2.3
+  - 2.3.3
 bundler_args: --without demo_test_run
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database spectre_test;' -U postgres
+addons:
+  postgresql: "9.4"
