modify Docker to run app in port 4000

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: "2"
 
 services:
   app:
-    image: wearefriday/spectre
     build: .
     ports:
-     - "3000:3000"
+     - "4000:4000"
     links:
      - db
     environment:
@@ -13,11 +12,11 @@ services:
       - RAILS_SERVE_STATIC_FILES=true
       - DATABASE_URL=postgresql://postgres@db/spectre
       - DOMAIN_NAME=app
-      - PORT=:3000
+      - PORT=:4000
       - PROTOCOL=http://
     volumes:
      - .:/app
-    command: bash -c "rm -f /app/tmp/pids/*.pid && rake assets:precompile && SECRET_KEY_BASE=`rake secret` rails server -b 0.0.0.0"
+    command: bash -c "rm -f /app/tmp/pids/*.pid && rake assets:precompile && SECRET_KEY_BASE=`rake secret` rails server -p 4000"
 
   db:
     image: postgres:9.6
