--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
   - 2.5
+before_install:
+  - gem update --system
+  - gem install bundler
 bundler_args: "--without demo_test_run"
 services:
   - postgresql
