Add DB ENV to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - RAILS_ENV=production
       - RAILS_SERVE_STATIC_FILES=true
       - DATABASE_URL=postgresql://postgres@db/spectre
+      - DATABASE_USERNAME=
+      - DATABASE_PASSWORD=
       - DOMAIN_NAME=app
       - PORT=:3000
       - PROTOCOL=http://
