Enable RAILS_LOG_TO_STDOUT for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - RAILS_ENV=production
       - RAILS_SERVE_STATIC_FILES=true
+      - RAILS_LOG_TO_STDOUT=true
       - DATABASE_URL=postgresql://postgres@db/spectre
       - DATABASE_USERNAME=
       - DATABASE_PASSWORD=
