Updates ruby to 2.7.1, bundler to 2.1.4
To fix failing travis builds.
I've added `POSTGRES_PASSWORD` env variable as required by an update to
the pg docker image. https://github.com/docker-library/postgres/issues/681

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ default: &default
   adapter: postgresql
   encoding: utf8
   username: <%= ENV['DATABASE_USERNAME'] %>
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] || ENV['DATABASE_PASSWORD'] %>
   pool: 5
   timeout: 5000
 
