--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,33 +4,34 @@ services:
   app:
     build: .
     ports:
-     - "3000:3000"
+      - "3000:3000"
     links:
-     - db
+      - db
     environment:
       - RAILS_ENV=production
       - RAILS_SERVE_STATIC_FILES=true
       - RAILS_LOG_TO_STDOUT=true
       - DATABASE_URL=postgresql://postgres@db/spectre
       - DATABASE_USERNAME=
-      - DATABASE_PASSWORD=
+      - POSTGRES_PASSWORD=somepassword
       - DOMAIN_NAME=app
       - PORT=:3000
       - PROTOCOL=http://
     volumes:
-     - .:/app
+      - .:/app
     command: bash -c "rm -f /app/tmp/pids/*.pid && rake assets:precompile && SECRET_KEY_BASE=`rake secret` rails server -p 3000"
 
   db:
     image: postgres:9.6
     ports:
-     - "5432"
+      - "5432"
     volumes:
-     - .:/app
-     - .:/public
-     - data-db:/var/lib/postgresql/data
+      - .:/app
+      - .:/public
+      - data-db:/var/lib/postgresql/data
     environment:
-     - POSTGRES_DB=spectre
+      - POSTGRES_DB=spectre
+      - POSTGRES_PASSWORD=somepassword
 
 volumes:
   data-db: {}
