--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,4 +1,4 @@
-name: spectre
+name: Test spectre
 
 on:
   push:
@@ -9,9 +9,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby-version: "2.7.1"
+    services:
+      postgres:
+        image: postgres:11
+        env:
+          POSTGRES_USER: spectre
+          POSTGRES_DB: spectre_test
+          POSTGRES_PASSWORD: ""
+        ports: ["5432:5432"]
 
     steps:
       - uses: actions/checkout@v2
@@ -19,9 +24,18 @@ jobs:
         # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
         # change this to (see https://github.com/ruby/setup-ruby#versioning):
         # uses: ruby/setup-ruby@v1
-        uses: ruby/setup-ruby@473e4d8fe5dd94ee328fdfca9f8c9c7afc9dae5e
+        uses: ruby/setup-ruby@1
         with:
-          ruby-version: ${{ matrix.ruby-version }}
+          ruby-version: 2.7.1
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+
+      - name: Set up test database
+        env:
+          RAILS_ENV: test
+          PGHOST: localhost
+          PGUSER: spectre
+        run: |
+          bin/rake db:setup
+
       - name: Run tests
         run: bundle exec rake
